syntax = "proto3";
package ivy_daemon_avs;

import "ivynet_api/types.proto";

message Operator {
    ivy_daemon_types.ResponseType response_type = 1;
    string address = 2;
    bool registered = 3;
    string shares = 4;
}

message QuorumShares {
    int32 quorum = 1;
    string shares = 2;
}

message OperatorRequest {
}

message OperatorSharesRequest {
    optional string address = 1;

}

service Operator {
    rpc GetOperator(OperatorRequest) returns (Operator);
    rpc GetOperatorShares()
}
